<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7bce8">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_character_detail"
        style="@style/RickAndMortyToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
        app:title="Персонаж"
        app:titleTextColor="#FFBE9B"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id_character_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_character_detail" />


    <ImageView
        android:id="@+id/image_character_details"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_character_detail" />

    <TextView
        android:id="@+id/name_character_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_character"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_character_details"
        app:layout_constraintTop_toBottomOf="@id/toolbar_character_detail" />

    <TextView
        android:id="@+id/species_character_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/species_character"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_character_details"
        app:layout_constraintTop_toBottomOf="@id/name_character_details" />

    <TextView
        android:id="@+id/gender_character_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/gender_character"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_character_details"
        app:layout_constraintTop_toBottomOf="@id/species_character_details" />

    <TextView
        android:id="@+id/status_character_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/status_character"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_character_details"
        app:layout_constraintTop_toBottomOf="@id/gender_character_details" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_character_details" />

    <com.example.rickandmorty.utils.progressbar.CustomProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_character_details" />
</androidx.constraintlayout.widget.ConstraintLayout>